fixed footer on mobile device

--- a/styles/flower.css
+++ b/styles/flower.css
@@ -441,7 +441,7 @@ input:focus {
     
     .footer-description {
         font-size: 14px;
-        width: 450px;
+        width: 350px;
     }
     
     .copyright {
